# Homework_Cmake

./: .gitignore  README.md
Task1/: CMakeLists.txt  Task1.cpp
Task2/: CMakeLists.txt  equilTriangle.cc  equilTriangle.h  figure.cc  figure.h  isosTriangle.cc  isosTriangle.h  main.cc  parallelogram.cc  parallelogram.h  quadrilateral.cc  quadrilateral.h  rectangle.cc  rectangle.h  rhombus.cc  rhombus.h  rightTriangle.cc  rightTriangle.h  square.cc  square.h  triangle.cc  triangle.h
